@@ -74,3 +74,39 @@ class TestURLEncode(unittest.TestCase):
     def test_query_and_fragment_quoted_to_path(self):
         self.assertQuote(u'http://foo.testing/bar?a=b&c=d#fragment',
                          'http://foo.testing/bar%3Fa%3Db%26c%3Dd%23fragment')
+
+
+
+
+class TestDAVResponse(unittest.TestCase):
+
+    RESPONSE_TEMPLATE = """\
+<D:multistatus xmlns:D="DAV:" xmlns:ns0="DAV:">
+<D:response xmlns:CMS="http://namespaces.zeit.de/CMS" xmlns:g0="http://namespaces.zeit.de/CMS/document" xmlns:g1="http://namespaces.zeit.de/CMS/lifetimecounter" xmlns:g2="http://namespaces.zeit.de/CMS/meta" xmlns:g3="http://namespaces.zeit.de/CMS/workflow" xmlns:lp1="DAV:" xmlns:lp2="http://apache.org/dav/props/">
+<D:href>%s</D:href>
+<D:propstat>
+<D:status>HTTP/1.1 200 OK</D:status>
+</D:propstat>
+</D:response>
+</D:multistatus>
+"""
+
+    def get_response(self, url):
+        from zeit.connector.dav.davresource import DAVResponse
+        from zeit.connector.dav.davxml import DavXmlDoc
+        doc = DavXmlDoc()
+        doc.from_string(self.RESPONSE_TEMPLATE % url)
+        return DAVResponse(doc, doc.get_response_nodes()[0])
+
+    def test_response_should_decode_urlencoded_urls(self):
+        self.assertEqual(u'/foo bar', self.get_response('/foo%20bar').url)
+
+    def test_response_should_decode_utf8_in_urlencode(self):
+        self.assertEqual(u'/foobär', self.get_response('/foob%C3%A4r').url)
+
+    def test_response_should_handle_unicode_urls(self):
+        self.assertEqual(u'/foobär', self.get_response('/foobär').url)
+
+    def test_response_should_handle_unicode_urls_with_quoting(self):
+        self.assertEqual(u'/foo bär', self.get_response('/foo%20bär').url)
+
